@@ -1,4 +1,4 @@
-.TH PCRE2SYNTAX 3 "13 April 2015" "PCRE2 10.20"
+.TH PCRE2SYNTAX 3 "22 April 2015" "PCRE2 10.20"
 .SH NAME
 PCRE2 - Perl-compatible regular expressions (revised API)
 .SH "PCRE2 REGULAR EXPRESSION SYNTAX SUMMARY"
@@ -32,11 +32,17 @@ documentation. This document contains a quick-reference summary of the syntax.
   \e0dd       character with octal code 0dd
   \eddd       character with octal code ddd, or backreference
   \eo{ddd..}  character with octal code ddd..
-  \exhh       character with hex code hh
+  \eU         "U" if PCRE2_ALT_BSUX is set (otherwise is an error) 
+  \euhhhh     character with hex code hhhh (if PCRE2_ALT_BSUX is set)
+  \exhh       character with hex code hh 
   \ex{hhh..}  character with hex code hhh..
 .sp
 Note that \e0dd is always an octal code, and that \e8 and \e9 are the literal
-characters "8" and "9".
+characters "8" and "9". When \ex is not followed by {, from zero to two 
+hexadecimal digits are read, but if PCRE2_ALT_BSUX is set, \ex must be followed 
+by two hexadecimal digits to be recognized as a hexadecimal escape; otherwise 
+it matches a literal "x". Likewise, if \eu (in ALT_BSUX mode) is not followed 
+by four hexadecimal digits, it matches a literal "u".
 .
 .
 .SH "CHARACTER TYPES"
@@ -322,13 +328,14 @@ but some of them use Unicode properties if PCRE2_UCP is set. You can use
   \eb          word boundary
   \eB          not a word boundary
   ^           start of subject
-               also after internal newline in multiline mode
+                also after an internal newline in multiline mode
+                (after any newline if PCRE2_ALT_CIRCUMFLEX is set) 
   \eA          start of subject
   $           end of subject
-               also before newline at end of subject
-               also before internal newline in multiline mode
+                also before newline at end of subject
+                also before internal newline in multiline mode
   \eZ          end of subject
-               also before newline at end of subject
+                also before newline at end of subject
   \ez          end of subject
   \eG          first matching position in subject
 .
@@ -549,6 +556,6 @@ Cambridge, England.
 .rs
 .sp
 .nf
-Last updated: 13 April 2015
+Last updated: 22 April 2015
 Copyright (c) 1997-2015 University of Cambridge.
 .fi
